Fixed code block horizontal scrolling.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -108,7 +108,11 @@ h2 + p {
 
 .highlight {
     background: rgba(255, 255, 255, 0.4);
+    margin-top: 0px;
+    padding-top: 2px;
+    margin-bottom: 0px;
+    margin-bottom: 2px;
     margin-left: 10px; 
-    white-space: pre-wrap;
     font-size: 14px;
+    overflow-x: auto;
 }
